# scoresheet

./: .gitignore  1.mid  2.mid  3.mid  7.-the-voice-in-my-heart-violet-evergarden-automemories---disc-1.mid  Brainiac Maniac - 植物大战僵尸战斗BGM.mid  DayTraintoLakeSilberneherze20260110 - 总谱 - 谱章 1.mid  Decretum & Conturbatio - 05_Harp - 谱章 1.mid  Decretum.mid  Genshin_Impact_Tender_Strength_原神_-_同伴的力量.mid  Mondstadt_Bustling_Afternoon_MuseScore_clean.mid  Mondstadt_Bustling_Afternoon_MuseScore_fixed.mid  README.md  Sayaka_Mikis_Theme.mid  Sis_Puella_Magica.mid  Speed of Light.mid  VIP广场.mid  advanced_offbeat_practice_120bpm_30bars (1).mid  advanced_offbeat_practice_120bpm_30bars.mid  advanced_offbeat_practice_120bpm_30bars_piano.mid  advanced_offbeat_practice_120bpm_30bars_piano_4-4.mid  decretum.v2.mid  decretum.v3.mid  melody.mid  melody_from_music_track.mid  piano.mid  pyproject.toml  vocal 1=D-Floete..mid  vocal 1=D-Oboe..mid  vocal 1=D.mid  vocal-Floete..mid  vocal-Oboe..mid  yurenqu_piano_melody.mid  「星语共愿」特别纪念PV - 1.「星语共愿」特别纪念PV(Av115768377215078,P1) [music] (1).mid  「星语共愿」特别纪念PV - 1.「星语共愿」特别纪念PV(Av115768377215078,P1) [music] (2).mid  「星语共愿」特别纪念PV - 1.「星语共愿」特别纪念PV(Av115768377215078,P1) [music].mid  「星语共愿」特别纪念PV - 1.「星语共愿」特别纪念PV(Av115768377215078,P1) [music].mp3.mid  【MIDI文件】蒙德城繁忙的午后Bustling Afternoon of Mondstadt(1).mid  冰雪圣地.mid  商业街.mid  (+10 more)
.github/workflows/: test.yml
examples/: README.md
scoresheet/: __init__.py  __main__.py  cli.py  midi_parser.py  musescore_backend.py  musescore_validator.py  musicxml_exporter.py  orchestrator.py
src/scoresheet/: __init__.py  __main__.py  arranger.py  cli.py  exporters.py  instrumentation.py  rules.py
tests/: conftest.py  test_arrange_flying_mouse.py  test_arranger.py  test_cli.py  test_end_to_end_smoke.py  test_exporter.py  test_import_compile.py  test_musescore_backend.py  test_musescore_backend_integration_optional.py  test_musescore_integration_optional.py  test_musescore_validator.py  test_musicxml_exporter.py  test_orchestrator.py  test_pipeline.py  test_rules.py
