[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "scoresheet"
version = "0.1.0"
description = "Rule-based MIDI piano score to orchestra/ensemble MusicXML arranger."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "LP-sun scoresheet contributors" }]
dependencies = [
  "music21>=9.1",
  "pretty_midi>=0.2.10",
  "mido>=1.3",
  "numpy>=1.24",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
scoresheet = "scoresheet.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.hatch.build.targets.wheel]
packages = ["scoresheet"]
