[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scoresheet"
version = "0.1.0"
description = "Rule-based MIDI piano score to orchestra/ensemble MusicXML arranger."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "LP-sun scoresheet contributors" }]
dependencies = [
  "music21>=9.1",
  "pretty_midi>=0.2.10",
  "mido>=1.3",
  "numpy>=1.24",
]

[project.optional-dependencies]
dev = ["pytest>=7"]
partitura = ["partitura>=1.4"]

[project.scripts]
scoresheet = "scoresheet.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
